flex wrapped some sections, Fixed my-resume section, positioning etc

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ p {
 * {
     box-sizing: content-box;
     
-    
+    font-family: 'roboto';
 }
 
 .avatar {
@@ -27,26 +27,65 @@ p {
 }
 
 /*Header*/
+
 .work {
     display: flex;
     flex-wrap: wrap;
+}
+
+.contact-me {
+    margin-bottom: 60px;
+}
+
+.my-resume {
+    margin-top:50px;
+    
+}
+
+.about-me .contact-me .my-resume .work {
+
     margin-top: 50px;
     
+      
 
 }
 
 .horiseon .calculator .run-buddy .led-wall{
     display: grid;
+    border-radius: 25px;
+    border: 15px solid #3C3B3F;
+    box-sizing: border-box;
     
 }
 
+.horiseon .calculator .run-buddy .led-wall:hover {
+    background-color:#5c5f58;
+    
+
+}
+
+.led-wall:hover {
+    opacity: 0.5;
+}
+
+.calculator:hover{
+    opacity: 0.5;
+}
+
+.horiseon:hover {
+    opacity: 0.5;
+}
+
+.run-buddy:hover {
+    opacity: 0.5;
+}
 .horiseon {
     width: 400px;
     height: 400px;
-    border: 5px solid #3B5249;
-    padding: 50px;
+    border: 15px solid #3C3B3F;
+    padding: 50px 25px 25px 75px;
     margin: 20px;
-    
+    border-radius: 25px;
     background-image: url("../images/horiseon.PNG");
     background-size: 100% 100%;
     
@@ -58,9 +97,10 @@ p {
 .calculator {
     width: 100px;
     height: 100px;
-    border: 5px solid #3B5249;
+    border: 5px solid #3C3B3F;
     padding: 50px;
     margin: 20px;
+    border-radius: 25px;
     align-self: flex-end;
     background-image: url("../images/calculator.PNG");
     background-size: 100% 100%;
@@ -69,8 +109,9 @@ p {
 .run-buddy{
     width: 100px;
     height: 100px;
-    border: 5px solid #3B5249;
+    border: 5px solid #3C3B3F;
     padding: 50px;
+    border-radius: 25px;
     margin: 20px;
     align-self: flex-end;
     background-image: url("../images/run-buddy.PNG");
@@ -81,8 +122,9 @@ p {
 .led-wall {
     width: 100px;
     height: 100px;
-    border: 5px solid #3B5249;
+    border: 5px solid #3C3B3F;
     padding: 50px;
+    border-radius: 25px;
     margin: 20px;
     align-self: flex-end;
     background-image: url("../images/led-wall.PNG");
@@ -104,18 +146,26 @@ h1 {
     text-align: center;
     padding-left: 50px;
     margin-bottom: 5px;
+    
+    
 }
 
 h2 {
     color: #212540;
+
 
 }
 
 h3 {
     
     background-color:#5c5f58;
-    
-    float:inline-end;  
+    padding: 0px;
+    text-align: center;
+    float: inline-end; 
+    width: 105px;
+    padding: 0px 25 25 25;
+    position: relative; 
+
     
 }
 
@@ -129,8 +179,9 @@ h3 span:hover {
 .hero {
     height: 460px;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
     margin-top:45px;
-    margin-bottom: 25px;
     background-image: url("../images/laptop-screen.jpg");
     background-size: cover;
     background-position: center;
@@ -142,10 +193,12 @@ ul li {
     color: #5c5f58;
     margin-right: 25px;
     padding-right: 20px;
-    text-align: left;
+    text-align: right;
     border-bottom: 3px solid transparent;
     font-family: 'roboto';
     overflow: hidden;
+    font-weight: bold;
+    font-size: 20px;
     
 }
 
@@ -156,7 +209,7 @@ li {
   
   li a {
     display: block;
-    text-align: center;
+    
     text-decoration: none;
   }
   
@@ -173,7 +226,7 @@ li {
 
 @media only screen and (max-width: 800px) {
     .horiseon .led-wall .calculator .run-buddy h3{    
-
+        
         flex-direction: column;
         
     }
